# EADS

./: .dockerignore  .env  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  Dockerfile.app  Dockerfile.neo4j  Dockerfile.postgres  KnowledgeBaseLayers.md  KnowledgeCaptureParameters.md  KnowledgeRepresentation.md  KnowledgeRepresentationTechnology.md  README.md  __init__.py  code_generation.py  config.template  deployment.py  docker-compose.yml  genetic_programming.py  init.py  init.sh  install_requirements.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  robustness_enhancements.py  run_pipeline.py  setup.py  setup.sh  setup_venvs.sh
EADS/: __init__.py
code_generation/: __init__.py  generator.py
config/: __init__.py  core_config.py  settings.py
core/: service_manager.py
doc/: KnowledgeCaptureParameters.md  KnowledgeRepresentationFeedbackLoop.md
docker/: Dockerfile.core  Dockerfile.dagster  Dockerfile.gp  Dockerfile.mlflow  Dockerfile.nlp  Dockerfile.requirements  Dockerfile.vector_store  docker-compose.yml  requirements.txt
docker/logging/: docker-compose.logging.yml
docker/logging/config/: promtail-local-config.yaml
docs/: DiagramsAll.md  Direction.md  EADS-20241211-1.md  EADS-20241211-2.md  EADS-20241211-3.md  EADS-20241211-4.md  SearchTechniquesWithRouter.md  model_evolution_design.md
error_handling/: __init__.py  error_handler.py
gp_engine/: gp_service.py  requirements.txt
init/: __init__.py  db_init.py  knowledge_base_init.py
nlp/: Dockerfile  __init__.py  nlp_service.py  requirements.txt
orchestration/: __init__.py  manager.py  workspace.yaml
orchestration/.telemetry/: id.yaml
orchestration/assets/: core_assets.py  llm_assets.py  xai_assets.py
orchestration/history/: runs.db
orchestration/jobs/: core_jobs.py
orchestration/schedules/: schedules.db
requirements/: base.txt  dev.txt  generate_locks.sh  gp.txt  lock_deps.sh  nlp.txt
scripts/: cleanup.sh  deep_cleanup.sh  reorganize_project.sh  setup_core_services.sh
scripts/setup/: build.sh  foo.sh  init.sh  install_requirements.sh
services/core/: Dockerfile
services/core/eads_core/: logging.py  main.py
services/core/eads_core/config/: __init__.py  settings.py
services/core/eads_core/error_handling/: __init__.py  handlers.py
services/core/eads_core/init/: __init__.py
services/core/eads_core/tracking/: dvc_manager.py  mlflow_manager.py  request_tracking.py
services/core/eads_core_tests/: __init__.py  test_main.py
services/core/requirements/: base.txt
services/gp/: Dockerfile  pyproject.toml
services/gp/eads_gp/: main.py
services/gp/eads_gp_tests/: __init__.py  test_main.py
services/gp/requirements/: gp.txt
services/llm/: __init__.py  xai.py
services/nlp/: Dockerfile  pyproject.toml
services/nlp/eads_nlp/: logging.py  main.py
services/nlp/eads_nlp/nlp/: nlp_service.py
services/nlp/eads_nlp/vector_store/: client.py
services/nlp/eads_nlp_tests/: test_main.py
services/nlp/requirements/: nlp.txt
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py  generator.py
src/core/robustness/: __init__.py
src/deployment/: __init__.py
src/error_handling/: __init__.py  fault_tolerance.py  service_wrappers.py
src/gp_engine/: Dockerfile  __init__.py  gp_service.py  requirements.txt
src/init/: db_init.py  knowledge_base_init.py
src/init/data/: base_patterns.json
src/nlp/: __init__.py  nlp_service.py  requirements.txt
src/orchestration/: __init__.py  run_pipeline.py
src/orchestration/assets/: __init__.py  core_assets.py
src/orchestration/history/: runs.db
src/orchestration/history/runs/: index.db
src/orchestration/jobs/: __init__.py  core_jobs.py
src/services/core/: README.md  pyproject.toml
src/services/core/eads_core/: main.py
src/services/core/eads_core/config/: __init__.py  settings.py
src/services/core/eads_core/error_handling/: error_handler.py
src/services/core/eads_core/orchestration/: __init__.py  (+2 more)
src/services/gp/: README.md  pyproject.toml
src/services/gp/eads_gp/: __init__.py
src/services/gp/eads_gp/gp_engine/: __init__.py  gp_service.py
src/services/gp/requirements/: gp.txt
src/services/llm/: gemini.py
src/services/nlp/: README.md  pyproject.toml
src/services/nlp/eads_nlp/: main.py
src/services/nlp/eads_nlp/config/: settings.py
src/services/nlp/eads_nlp/nlp/: __init__.py
src/services/nlp/eads_nlp_tests/: __init__.py  test_main.py
src/services/nlp/requirements/: nlp.txt
src/utils/: env.py  logger.py
src/vector_store/: schema.py
tests/: conftest.py  test_main.py
tracking/: __init__.py
utils/: logger.py
vector_store/: __init__.py  client.py  config.py
(+5 files in other folders)
