[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eads"
version = "0.1.0"
description = "EADS - Evolutionary Algorithm Design System"
authors = ["nshkr <nshkr@nshkr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "5.3.2"
dagster = "1.6.7"
dagster-graphql = "1.6.7"
dagster-webserver = "1.6.7"
deap = "1.4.1"
dvc = "3.38.1"
fastapi = "0.110.0"
httpx = "0.26.0"
langchain = "0.1.9"
langsmith = "0.1.2"
llama-index = ">=0.9.15"
mlflow = "2.10.0"
neo4j = "5.15.0"
psycopg2-binary = "2.9.9"
pydantic = "2.5.0"
python-json-logger = "^2.0.7"
scikit-learn = "1.3.0"
sentence-transformers = "2.5.0"
sqlalchemy = "2.0.25"
structlog = "^24.1.0"
tensorflow = "2.18.0"
torch = "2.2.1"
uvicorn = "0.27.0"
weaviate-client = "4.4.4"

[tool.poetry.group.dev.dependencies]
black = "23.12.0"
flake8 = "7.0.0"
isort = "5.13.0"
mypy = "1.8.0"
pre-commit = "3.6.0"
pytest = "7.4.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
python-dotenv = "1.0.0"
types-cachetools = "5.3.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
