[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eads-gp"
version = "0.1.0"
description = "EADS GP Service"
authors = ["nshkr <nshkr@nshkr.com>"]

[tool.poetry.dependencies]
python = "^3.11"
deap = "1.4.1"
fastapi = "0.110.0"
httpx = "0.26.0"
pydantic = "2.5.0"
ray = {version = "2.9.3", extras = ["default"]}
scikit-learn = "1.3.0"
tensorflow = "2.15.0"
torch = "2.2.1"
transformers = "4.38.1"
uvicorn = "0.27.0"
weaviate-client = "4.4.0"
eads = {path = "../..", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
