[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eads-nlp"
version = "0.1.0"
description = "EADS NLP Service"
authors = ["nshkr <nshkr@nshkr.com>"]
packages = [
    { include = "eads_nlp" },
    { include = "eads_nlp.nlp" },
    { include = "eads_nlp.config" },
    { include = "eads_nlp.vector_store" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
httpx = "0.26.0"
langchain = "0.1.9"
llama-index = "0.9.15"
pydantic = "2.5.0"
sentence-transformers = "2.5.0"
uvicorn = "0.27.0"
eads = {path = "../..", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
